# flutter_cpp_with_opencv

./: pubspec.yaml
android/: CMakeLists.txt  build.gradle
example/: pubspec.yaml
example/android/app/: build.gradle
example/ios/Flutter/: .last_build_id
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: native_with_opencv.podspec
ios/Classes/: native_add.cpp
lib/: native_with_opencv.dart
